force-app/main/default/src/objects/Campaign/fields/Address_MVN__c.field-meta.xml
<CustomField>
    <fullName>Address_MVN__c</fullName>
    <description>Address for the event.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>