force-app/main/default/src/objects/Campaign/fields/Approximate_Wait_Time_MVN__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Wait_Time_MVN__c</fullName>
    <description>Approximate length of time attendees needed to wait for their interaction/screening, on average.</description>
    <label>Approximate Wait Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 5 minutes</fullName>
            </value>
            <value>
                <fullName>5-10 minutes</fullName>
            </value>
            <value>
                <fullName>10-20 minutes</fullName>
            </value>
            <value>
                <fullName>20-30 minutes</fullName>
            </value>
            <value>
                <fullName>Over 30 minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>