force-app/main/default/src/objects/Campaign/fields/Comments_MVN__c.field-meta.xml
<CustomField>
    <fullName>Comments_MVN__c</fullName>
    <description>Summarized feedback of the event, the interaction/screening process, and its effectiveness.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Summarized feedback of the event, the interaction/screening process, and its effectiveness.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>