force-app/main/default/src/objects/Campaign/fields/Company_Host_MVN__c.field-meta.xml
<CustomField>
    <fullName>Company_Host_MVN__c</fullName>
    <description>The company/host for the event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company/Host</label>
    <length>100</length>
    <type>Text</type>
</CustomField>