force-app/main/default/src/objects/Campaign/fields/End_Time_MVN__c.field-meta.xml
<CustomField>
    <fullName>End_Time_MVN__c</fullName>
    <description>The event&apos;s end time</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>