force-app/main/default/src/objects/Campaign/fields/Event_Type_MVN__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_MVN__c</fullName>
    <description>Type of event being planned.</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Cultural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>