force-app/main/default/src/objects/Campaign/fields/Program_Specialist_Overloaded_MVN__c.field-meta.xml
<CustomField>
    <fullName>Program_Specialist_Overloaded_MVN__c</fullName>
    <description>Was the program specialist overloaded by demand at this event?</description>
    <inlineHelpText>Was the program specialist overloaded by demand at this event?</inlineHelpText>
    <label>Program Specialist Overloaded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_MVN</valueSetName>
    </valueSet>
</CustomField>