force-app/main/default/src/objects/Campaign/fields/Start_Time_MVN__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_MVN__c</fullName>
    <description>The event&apos;s start time</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>