force-app/main/default/src/objects/Campaign/fields/Total_Number_of_Attendees_MVN__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Attendees_MVN__c</fullName>
    <description>Total number of people attending the event.</description>
    <label>Total Number of Attendees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>