force-app/main/default/src/objects/Campaign/listViews/All_Campaigns_MVN.listView-meta.xml
<ListView>
    <fullName>All_Campaigns_MVN</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>Address_MVN__c</columns>
    <columns>Event_Type_MVN__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Campaigns</label>
</ListView>